--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,8 @@
+source 'https://github.com/CocoaPods/Specs.git'
+
+platform :ios, '9.0'
 use_frameworks!
 
-target 'KMPageMenu_Example' do
+target 'KMPageMenuExample' do
   pod 'KMPageMenu', :path => '../'
-
-  target 'KMPageMenu_Tests' do
-    inherit! :search_paths
-
-    
-  end
 end
